[gd_scene load_steps=10 format=3 uid="uid://bihwe704p6xmm"]

[ext_resource type="Script" path="res://scripts/scene0_main_menu.gd" id="1_d0mbw"]
[ext_resource type="Texture2D" uid="uid://y8caswi4iq7q" path="res://Bilder/celestial.jpg" id="1_sntc7"]
[ext_resource type="FontFile" uid="uid://b67sne2kgw6ye" path="res://fonts/Berry Rotunda.ttf" id="2_axqly"]
[ext_resource type="PackedScene" uid="uid://xq7oam55djhf" path="res://global/pause_manager.tscn" id="4_8oqcm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_74sqa"]
texture = ExtResource("1_sntc7")
modulate_color = Color(0.585062, 0.585062, 0.585062, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jci1r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ww86v"]
bg_color = Color(0.290368, 0.608996, 0.608874, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.284718, 0.607566, 0.660299, 1)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t5vbt"]
bg_color = Color(1.20327e-06, 0.52606, 0.528086, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.341176, 0.537255, 0.537255, 1)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0sc0"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.341176, 0.537255, 0.537255, 1)
shadow_size = 5

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d0mbw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_74sqa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.0
offset_top = -38.0
offset_right = 237.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_axqly")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_jci1r")
theme_override_styles/hover = SubResource("StyleBoxFlat_ww86v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t5vbt")
theme_override_styles/normal = SubResource("StyleBoxFlat_y0sc0")
text = "Start game"

[node name="help" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_axqly")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_jci1r")
theme_override_styles/hover = SubResource("StyleBoxFlat_ww86v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t5vbt")
theme_override_styles/normal = SubResource("StyleBoxFlat_y0sc0")
text = "Help"

[node name="credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_axqly")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_jci1r")
theme_override_styles/hover = SubResource("StyleBoxFlat_ww86v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t5vbt")
theme_override_styles/normal = SubResource("StyleBoxFlat_y0sc0")
text = "Credits"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_axqly")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_jci1r")
theme_override_styles/hover = SubResource("StyleBoxFlat_ww86v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t5vbt")
theme_override_styles/normal = SubResource("StyleBoxFlat_y0sc0")
text = "Exit
"

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -104.5
offset_top = 102.0
offset_right = 104.5
offset_bottom = 144.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.341176, 0.537255, 0.537255, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_axqly")
theme_override_font_sizes/font_size = 60
text = "Burnout Angel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pause_manager" parent="." instance=ExtResource("4_8oqcm")]
visible = false
position = Vector2(-2, -1)

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
